--- a/views/auth/signin.pug
+++ b/views/auth/signin.pug
@@ -1,25 +1,27 @@
-doctype html
+<!DOCTYPE html>
 html(lang="en")
     head
         include ../partials/headers
     body.login
         .contenedor-formulario
-            h1 Crea tu cuenta en UpTask!
-
+            h1 Iniciar Sesión en UpTask
+            
             if locals.mensajes
                 .alertas
                     each categoria in Object.keys(locals.mensajes)
                         each error in mensajes[categoria]
                             .alerta(class=`${categoria}`)
                                 p= error
-            form#formulario.caja.caja-login(method="POST" action="/auth/signup")
+
+            form#formulario.caja.caja-login(method="POST" action="/auth/signin")
                 .campo
-                    label(for="email") E-mail: 
-                    input(type="text" name="email" placeholder="Escribe tu Email")
+                    label(for="email") E-mail:
+                    input(type="text" name="email" placeholder="Tu Email" )
                 .campo
                     label(for="password") Password:
                     input(type="password" name="password" placeholder="Tu Password" )
                 .campo.enviar
-                    input.boton(type="submit" value="Crear Cuenta")
-                .campo
-                    a(href="") Volver a Iniciar Sesión
+                    input.boton(type="submit" value="Iniciar Sesión")
+                .campo.acciones
+                    a(href="/crear-cuenta") ¿Aún no tienes cuenta? Crea una gratis
+                    a(href="/reestablecer") ¿Olvidaste tu Contraseña?
