--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,21 @@
 <doctype html
 html(lang="en")
     head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title AAA
+        include partials/headers
     body 
+        header.barra
+            h1 UpTask - Administrador de Proyectos
+            a(href="/auth/signoff") Cerrar Sesión
+        main.contenedor
+            aside.contenedor-proyectos
+                .panel.crear-proyecto
+                    a(href="/nuevo-proyecto" class="boton") Nuevo Proyecto
+                        span +
+                .panel.lista-proyectos
+                    h2 Proyectos
+                    ul#proyectos.proyectos
+            block contenido
+
+        script(src="/dist/bundle.js")  
+            
+    
