--- a/views/auth/signin.pug
+++ b/views/auth/signin.pug
@@ -23,5 +23,5 @@ html(lang="en")
                 .campo.enviar
                     input.boton(type="submit" value="Iniciar Sesión")
                 .campo.acciones
-                    a(href="/crear-cuenta") ¿Aún no tienes cuenta? Crea una gratis
+                    a(href="/auth/signup") ¿Aún no tienes cuenta? Crea una gratis
                     a(href="/reestablecer") ¿Olvidaste tu Contraseña?
