--- a/views/auth/signup.pug
+++ b/views/auth/signup.pug
@@ -22,4 +22,4 @@ html(lang="en")
                 .campo.enviar
                     input.boton(type="submit" value="Crear Cuenta")
                 .campo
-                    a(href="") Volver a Iniciar Sesión
+                    a(href="/auth/signin") Volver a Iniciar Sesión
