--- a/views/mixins/createProyect.pug
+++ b/views/mixins/createProyect.pug
@@ -1,7 +1,7 @@
-mixin createProyect(proyecto = {})
-    form.agregar-proyecto(action="/new-proyect" method="POST")
+mixin createProyect(proyect = {})
+    form.agregar-proyecto(action=`/new-proyect/${proyect.id || ''}` method="POST")
         .campo
             label(for="nombre") Nombre Proyecto:
-            input( type="text" id="nombre" name="nombre" placeholder="Nombre Proyecto")
+            input( type="text" id="nombre" name="nombre" value=proyect.nombre placeholder="Nombre Proyecto")
         .campo.enviar
-            input(type="submit" value= 'Guardar' class="boton")
+            input(type="submit" value=`${proyect.nombre ? 'Guardar' : 'Agregar'  }`  class="boton")
