--- a/views/proyects/task.pug
+++ b/views/proyects/task.pug
@@ -13,3 +13,21 @@ block contenido
             .campo.enviar
                 input.boton.nueva-tarea(type="submit" value="Agregar")
 
+        .listado-pendientes
+            ul
+                if tareas.length
+                    each tarea in tareas
+                        li.tarea(data-tarea=tarea.id)
+                            p= tarea.tarea
+                            .acciones
+                                if tarea.estado
+                                    i.far.fa-check-circle.completo
+                                else 
+                                    i.far.fa-check-circle
+                                i.fas.fa-trash  
+                else 
+                    p No hay tareas en este proyecto 
+
+        .contenedor-acciones
+            a(href=`/proyect/edit/${proyect.id}` class="boton") Editar Proyecto
+            button#eliminar-proyecto(data-proyecto-url=proyect.url type="button" class="boton eliminar") Eliminar Proyecto
